# mjw-server

./: .gitignore  Makefile  README.md  app.tsx  index.html  main.py  package.json  project.json  pyproject.toml
.husky/: commit-msg  pre-commit
mjw_server/: main.py  path.py
scripts/: run.py
src/: main.py
src/routers/: faker.py
src/templates/: index.html
static/: web.js
templates/: index.html
tests/: test_mjw_server.py
